--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,6 +24,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# status bar
+set -g status-position top
+
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
 bind -n S-Right next-window
