--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -24,6 +24,10 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# Alt- hl to switch horizontal panes
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+
 # status bar
 set -g status-position top
 
