--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -39,18 +39,26 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
-
+# colorscheme
+set -g @catppuccin_flavour 'macchiato'
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_window_current_fill "all"
+set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_right_separator "█ "
+set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_number_position "left"
+set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_default_fill "none"
+set -g @catppuccin_status_modules_right "directory session date_time"
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
@@ -61,3 +69,5 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
