tmux: reset prefix

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -2,9 +2,12 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
-unbind C-b
-set -g prefix C-Space
-bind C-Space send-prefix
+# unbind C-b
+# set -g prefix C-Space
+# bind C-Space send-prefix
+unbind C-Space
+set -g prefix C-b
+bind C-b send-prefix
 
 # Vim style pane selection
 bind h select-pane -L
