--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -56,10 +56,10 @@ set -g @catppuccin_flavour 'macchiato'
 set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_window_current_fill "all"
 set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_right_separator "█ "
-set -g @catppuccin_window_left_separator "█"
+set -g @catppuccin_window_right_separator "█"
+set -g @catppuccin_window_left_separator "|█"
 set -g @catppuccin_window_number_position "left"
-set -g @catppuccin_window_middle_separator " | "
+set -g @catppuccin_window_middle_separator "| "
 set -g @catppuccin_window_default_fill "none"
 set -g @catppuccin_status_modules_right "directory session date_time"
 # set vi-mode
