--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -22,7 +22,7 @@ os:
 customCommands:
   - key: "p"
     context: "global"
-    command: "git pull --tags"
+    command: "git pull; git pull --tags"
   - key: "P"
     context: "global"
-    command: "git push --tags"
+    command: "git push; git push --tags"
