--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -53,11 +53,14 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # colorscheme
 set -g @catppuccin_flavour 'macchiato'
-set -g @catppuccin_status_left_separator "█"
+# set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_left_separator ""
+set -g @catppuccin_status_right_separator ""
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
-set -g @catppuccin_window_right_separator "█"
-set -g @catppuccin_window_left_separator "█"
+# set -g @catppuccin_window_right_separator "█"
+set -g @catppuccin_window_right_separator ""
+set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_middle_separator ""
 set -g @catppuccin_window_default_fill "number"
