mac: rounded tmux continued

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -65,6 +65,7 @@ set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_middle_separator ""
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_status_modules_right "directory session date_time"
+set -g @catppuccin_status_connect_separator "no"
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
