--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -53,6 +53,8 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # colorscheme
 set -g @catppuccin_flavour 'macchiato'
+set -g @catppuccin_status_background "default"
+set -g @catppuccin_window_default_background ""
 # set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_left_separator ""
 set -g @catppuccin_status_right_separator ""
