--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -68,6 +68,7 @@ set -g @catppuccin_window_middle_separator ""
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_status_modules_right "directory session"
 set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_session_text "null"
 # set vi-mode
 set-window-option -g mode-keys vi
 # keybindings
