--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -54,27 +54,28 @@ foreground = "0xD9E0EE"
 TERM = "xterm-256color"
 
 [font]
-size = 12
+size = 14
 
-[font.bold]
-family = "JetBrainsMono Nerd Font"
-style = "Black"
+# [font.bold]
+# family = "JetBrainsMono Nerd Font"
+# style = "Black"
 
 [font.glyph_offset]
 x = 0
 y = 0
 
-[font.italic]
-family = "JetBrainsMono Nerd Font Mono"
-style = "Italic"
+# [font.italic]
+# family = "JetBrainsMono Nerd Font Mono"
+# style = "Italic"
 
 [font.normal]
-family = "JetBrainsMono Nerd Font Mono"
+family = "zed mono extended"
 style = "Medium"
+# family = "JetBrainsMono Nerd Font Mono"
 
 [font.offset]
 x = 0
-y = 1
+y = 0
 
 [mouse]
 # faux_scrolling_lines = 1
