--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,11 +1,13 @@
-font_family      CaskaydiaCove Nerd Font Mono
+# font_family      CaskaydiaCove Nerd Font Mono
+font_family      zed-mono-extended
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 
 font_size 16
-window_padding_width 25
+modify_font cell_height 110%
+window_padding_width 0
 include theme.conf
-#background_opacity 0.60
+# background_opacity 0.60
 #hide_window_decorations yes
 #confirm_os_window_close 0
