hyprland: resolution & move window

--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -7,6 +7,9 @@
 #
 
 
+# Monitors
+monitor=eDP-1,1920x1080@120,0x0,1.2
+monitor=HDMI-A-1, preferred, 1600x0, 1.6
 # Azerty binding for 1-7
 bind = $mainMod, ampersand, workspace, 1
 bind = $mainMod, eacute, workspace, 2
@@ -15,6 +18,16 @@ bind = $mainMod, apostrophe, workspace, 4
 bind = $mainMod, parenleft, workspace, 5
 bind = $mainMod, minus, workspace, 6
 bind = $mainMod, egrave, workspace, 7
+
+
+# Move focused window to a workspace
+bind = $mainMod+Shift, ampersand, movetoworkspace, 1
+bind = $mainMod+Shift, eacute, movetoworkspace, 2
+bind = $mainMod+Shift, quotedbl, movetoworkspace, 3
+bind = $mainMod+Shift, apostrophe, movetoworkspace, 4
+bind = $mainMod+Shift, parenleft, movetoworkspace, 5
+bind = $mainMod+Shift, minus, movetoworkspace, 6
+bind = $mainMod+Shift, egrave, movetoworkspace, 7
 
 bindl = , mouse_right, exec, $scrPath/volumecontrol.sh -o d # decrease volume
 bindl = , mouse_left, exec, $scrPath/volumecontrol.sh -o i # increase volume
