--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -25,6 +25,7 @@
     "custom/r_end",
     "custom/l_end",
     "wlr/taskbar",
+    "hyprland/workspaces",
     "custom/spotify",
     "custom/r_end",
     "",
@@ -53,7 +54,22 @@
     "custom/r_end",
     "custom/padd",
   ],
-
+  "hyprland/workspaces": {
+    "on-scroll-up": "hyprctl dispatch workspace r-1",
+    "on-scroll-down": "hyprctl dispatch workspace r+1",
+    "on-click": "activate",
+    "active-only": false,
+    "all-outputs": true,
+    "format": "{}",
+    "format-icons": {
+      "urgent": "",
+      "active": "",
+      "default": "",
+    },
+    "persistent-workspaces": {
+      "*": 5,
+    },
+  },
   // sourced from modules based on config.ctl //
 
   "custom/power": {
