--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,6 @@
 # font_family      CaskaydiaCove Nerd Font Mono
 font_family      zed-mono-extended
+# font_family      ZedMonoNerdFont
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
