--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -19,9 +19,9 @@
     "custom/l_end",
     "custom/power",
     "custom/cliphist",
-    "custom/wbar",
-    "custom/theme",
-    "custom/wallchange",
+    // "custom/wbar",
+    // "custom/theme",
+    // "custom/wallchange",
     "custom/r_end",
     "custom/l_end",
     "wlr/taskbar",
