--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -10,6 +10,10 @@
 # Monitors
 monitor=eDP-1,1920x1080@120,0x0,1.2
 monitor=HDMI-A-1, preferred, 1600x0, 1.6
+workspace = 1, monitor:HDMI-A-1, default:true
+workspace = 2, monitor:HDMI-A-1
+workspace = 3, monitor:HDMI-A-1
+
 # Azerty binding for 1-7
 bind = $mainMod, ampersand, workspace, 1
 bind = $mainMod, eacute, workspace, 2
