--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,14 +1,25 @@
+tab_bar_edge top
+
 # font_family      CaskaydiaCove Nerd Font Mono
 font_family      zed-mono-extended
 # font_family      ZedMonoNerdFont
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
+# disable_ligatures always
+disable_ligatures_in all always
+# == !== != => 
 
-font_size 16
+font_size 14
 modify_font cell_height 110%
-window_padding_width 0
+window_padding_width 2
 include theme.conf
 # background_opacity 0.60
 #hide_window_decorations yes
 #confirm_os_window_close 0
+
+## SHORTCUTS
+
+# kitty_mod ctrl+b
+map kitty_mod+f5 load_config_file  .config/kitty/kitty.conf
+map kitty_mod+f3 disable_ligatures_in all always
