--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -35,8 +35,13 @@ bind = $mainMod+Shift, egrave, movetoworkspace, 7
 
 bindl = , mouse_right, exec, $scrPath/volumecontrol.sh -o d # decrease volume
 bindl = , mouse_left, exec, $scrPath/volumecontrol.sh -o i # increase volume
+
+
+bind = $mainMod+Alt, F, exec, $browser --private-window # launch web browser
+
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 exec-once = solaar -w hide #logitec mouse
+exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
