small volume fix

--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -33,8 +33,8 @@ bind = $mainMod+Shift, parenleft, movetoworkspace, 5
 bind = $mainMod+Shift, minus, movetoworkspace, 6
 bind = $mainMod+Shift, egrave, movetoworkspace, 7
 
-bindl = , mouse_right, exec, $scrPath/volumecontrol.sh -o d # decrease volume
-bindl = , mouse_left, exec, $scrPath/volumecontrol.sh -o i # increase volume
+bind = , mouse_right, exec, $scrPath/volumecontrol.sh -o d # decrease volume
+bind = , mouse_left, exec, $scrPath/volumecontrol.sh -o i # increase volume
 
 
 bind = $mainMod+Alt, F, exec, $browser --private-window # launch web browser
