--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,21 +1,26 @@
+term xterm-kitty
+include theme.conf
 tab_bar_edge top
 
 # font_family      CaskaydiaCove Nerd Font Mono
-font_family      zed-mono-extended
-# font_family      ZedMonoNerdFont
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+# font_family      zed-mono-extended
+# font_family      ZedMonoNFM-ExtdLight
+# bold_font        ZedMonoNFM-Extd
+font_family            BlexMonoNFM
+bold_font              BlexMonoNFM-SemiBold
+italic_font            BlexMonoNFM-Italic
+bold_italic_font       BlexMonoNFM-BoldItalic
 # disable_ligatures always
+# faont family 
 disable_ligatures_in all always
 # == !== != => 
 
-font_size 14
-modify_font cell_height 110%
+font_size 22
+modify_font cell_height 120%
 window_padding_width 2
-include theme.conf
-# background_opacity 0.60
-#hide_window_decorations yes
+background_opacity 0.95
+background_blur 20
+hide_window_decorations true
 #confirm_os_window_close 0
 
 ## SHORTCUTS
