launch shortcut & zshrc cleanup

--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -34,11 +34,14 @@ bind = $mainMod+Shift, parenleft, movetoworkspace, 5
 bind = $mainMod+Shift, minus, movetoworkspace, 6
 bind = $mainMod+Shift, egrave, movetoworkspace, 7
 
+# volume w mouse
 bind = , mouse_right, exec, $scrPath/volumecontrol.sh -o d # decrease volume
 bind = , mouse_left, exec, $scrPath/volumecontrol.sh -o i # increase volume
 
 
+# keybinds
 bind = $mainMod+Alt, F, exec, $browser --private-window # launch web browser
+bind = $mainMod, space, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
