--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,20 +2,22 @@ term xterm-kitty
 include theme.conf
 tab_bar_edge top
 
-# font_family      CaskaydiaCove Nerd Font Mono
-# font_family      zed-mono-extended
+font_family      CaskaydiaCove Nerd Font Mono
+italic_font      auto
+bold_font        auto
+bold_italic_font auto
+# font_family         zed-mono-extended
 # font_family      ZedMonoNFM-ExtdLight
-# bold_font        ZedMonoNFM-Extd
-font_family            BlexMonoNFM
-bold_font              BlexMonoNFM-SemiBold
-italic_font            BlexMonoNFM-Italic
-bold_italic_font       BlexMonoNFM-BoldItalic
+# font_family            BlexMonoNFM-Medium
+# bold_font              BlexMonoNFM-Bold
+# italic_font            BlexMonoNFM-Italic
+# bold_italic_font       BlexMonoNFM-SemiBoldItalic
 # disable_ligatures always
 # faont family 
 disable_ligatures_in all always
 # == !== != => 
 
-font_size 22
+font_size 16
 modify_font cell_height 120%
 window_padding_width 2
 background_opacity 0.95
