--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -50,6 +50,7 @@ bind = $mainMod, space, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch
 # See https://wiki.hyprland.org/Configuring/Keywords/
 exec-once = solaar -w hide #logitec mouse
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
+exec-once = kwalletd6 &
 
 # Animation CPU usage fix
 animations {
