--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -64,6 +64,7 @@ bind = $mainMod CTRL , H, changegroupactive, b
 bind = $mainMod CTRL , L, changegroupactive, f
 
 # Screenshot/Screencapture
+bind = $mainMod, F1, exec, grimblast save output
 bind = $mainMod, P, exec, $scrPath/screenshot.sh s # partial screenshot capture
 bind = $mainMod+Ctrl, P, exec, $scrPath/screenshot.sh sf # partial screenshot capture (frozen screen)
 bind = $mainMod+Alt, P, exec, $scrPath/screenshot.sh m # monitor screenshot capture
