--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -68,3 +68,20 @@ animations {
     animation = fade, 1, 10, default
     animation = workspaces, 1, 5, wind
 }
+
+input {
+    kb_layout = fr
+    follow_mouse = 1
+
+    touchpad {
+        natural_scroll = yes
+    }
+
+    sensitivity = 0
+    force_no_accel = 1
+    numlock_by_default = true
+}
+
+# window effects
+
+windowrulev2 = opacity 0.80 0.80,class:^(lutris)$ # lutris
