--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -61,6 +61,8 @@ set -g @catppuccin_status_left_separator ""
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
+set -g @catppuccin_window_text "#W"
+set -g @catppuccin_window_default_text "#W"
 # set -g @catppuccin_window_right_separator "█"
 set -g @catppuccin_window_right_separator ""
 set -g @catppuccin_window_left_separator ""
