lutris & keyboard input

--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -70,7 +70,7 @@ animations {
 }
 
 input {
-    kb_layout = fr
+    kb_layout = fr,us
     follow_mouse = 1
 
     touchpad {
@@ -84,4 +84,4 @@ input {
 
 # window effects
 
-windowrulev2 = opacity 0.80 0.80,class:^(lutris)$ # lutris
+windowrulev2 = opacity 0.80 0.70,class:lutris # lutris
