--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -16,6 +16,9 @@ bold_italic_font auto
 # faont family 
 disable_ligatures_in all always
 # == !== != => 
+cursor_trail_start_threshold 0
+cursor_trail 3
+cursor_trail_decay 0.1 0.4
 
 font_size 16
 modify_font cell_height 120%
