monitor & new hyperland

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -26,7 +26,7 @@ window_padding_width 2
 background_opacity 0.95
 background_blur 20
 hide_window_decorations true
-#confirm_os_window_close 0
+confirm_os_window_close 0
 
 ## SHORTCUTS
 
