monitor & lutris shortcut

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -153,6 +153,7 @@ bind = $mainMod, S, togglespecialworkspace,
 
 # Toggle focused window split
 bind = $mainMod, J, togglesplit
+bind = $mainMod+Shift, G, exec,lutris
 
 # Move focused window to a workspace silently
 bind = $mainMod+Alt, 1, movetoworkspacesilent, 1
