--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -9,7 +9,7 @@
 
 # Monitors
 monitor=eDP-1,1920x1080@120,0x0,1.2
-# monitor=HDMI-A-1, preferred, 1600x0, 1.6
+monitor=HDMI-A-1, preferred, 1600x0, 1.6
 monitor= desc:LG Electronics LG ULTRAGEAR 308NTKF2S389, preferred, 0x-1152, 1.25
 monitor=DP-1, preferred, 1600x0, 1
 monitor=DP-2, preferred, 1600x0, 1.6
@@ -85,4 +85,5 @@ input {
 
 # window effects
 
-windowrulev2 = opacity 0.90 0.70,title:.*Lutris.*
+windowrulev2 = opacity 0.80 0.70,title:.*Lutris.*
+windowrulev2 = float,class:^(protonvpn-app)$
