--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -82,5 +82,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# Bind to prefix + D (capital D)
+bind-key -r i run-shell "tmux neww ~/dotfiles/my-scripts/workspace.sh"
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
