--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -9,10 +9,11 @@
 
 # Monitors
 monitor=eDP-1,1920x1080@120,0x0,1.2
-monitor=HDMI-A-1, preferred, 1600x0, 1.6
+# monitor=HDMI-A-1, preferred, 1600x0, 1.6
 monitor= desc:LG Electronics LG ULTRAGEAR 308NTKF2S389, preferred, 0x-1152, 1.25
 monitor=DP-1, preferred, 1600x0, 1
-monitor=DP-2, preferred, 1600x0, 1.6
+# monitor=DP-2, preferred, 1600x0, 1.6
+# workspace = r[1-4],monitor:eDP-1, default:true, gapsout:0
 # workspace = 1, monitor:HDMI-A-1, default:true
 # workspace = 2, monitor:HDMI-A-1
 # workspace = 3, monitor:HDMI-A-1
@@ -44,6 +45,7 @@ bind = , mouse_left, exec, $scrPath/volumecontrol.sh -o i # increase volume
 # keybinds
 bind = $mainMod+Alt, F, exec, $browser --private-window # launch web browser
 bind = $mainMod, space, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
+bind = $mainMod, semicolon, exec, pkill -x rofi || rofi -show emoji -modi emoji
 
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
@@ -81,6 +83,9 @@ input {
     sensitivity = 0
     force_no_accel = 1
     numlock_by_default = true
+}
+cursor {
+  no_hardware_cursors=true
 }
 
 # window effects
