--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -92,3 +92,10 @@ cursor {
 
 windowrulev2 = opacity 0.80 0.70,title:.*Lutris.*
 windowrulev2 = float,class:^(protonvpn-app)$
+# Smart gaps from hyperland docs
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrule = rounding 0, floating:0, onworkspace:w[tv1]
+windowrule = bordersize 0, floating:0, onworkspace:f[1]
+windowrule = rounding 0, floating:0, onworkspace:f[1]
