keychron + godot workspace

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -83,6 +83,8 @@ bind = $mainMod+Shift, W, exec, pkill -x rofi || $scrPath/swwwallselect.sh # lau
 bind = $mainMod, V, exec, pkill -x rofi || $scrPath/cliphist.sh c # launch clipboard
 bind = $mainMod, K, exec, $scrPath/keyboardswitch.sh # switch keyboard layout
 
+bind = $mainMod+Ctrl, G, exec, ~/dotfiles/my-scripts/godotWorkspace.sh # game dev workspace
+
 # Move/Change window focus
 bind = $mainMod, Left, movefocus, l
 bind = $mainMod, Right, movefocus, r
