--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -12,7 +12,7 @@ monitor=eDP-1,1920x1080@120,0x0,1.2
 # monitor=HDMI-A-1, preferred, 1600x0, 1.6
 monitor= desc:LG Electronics LG ULTRAGEAR 308NTKF2S389, preferred, 0x-1152, 1.25
 monitor=DP-1, preferred, 1600x0, 1
-# monitor=DP-2, preferred, 1600x0, 1.6
+monitor=DP-2, preferred, 1600x0, 1.6
 # workspace = r[1-4],monitor:eDP-1, default:true, gapsout:0
 # workspace = 1, monitor:HDMI-A-1, default:true
 # workspace = 2, monitor:HDMI-A-1
