--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -13,7 +13,8 @@ $term = kitty tmux
 $editor = code
 $nvim = kitty nvim
 $file = dolphin
-$browser = firefox
+# $browser = firefox
+$browser = zen-browser
 
 # Window/Session actions
 bind = $mainMod, Q, exec, $scrPath/dontkillsteam.sh # close focused window
