--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -13,6 +13,8 @@ monitor=eDP-1,1920x1080@120,0x0,1.2
 monitor= desc:LG Electronics LG ULTRAGEAR 308NTKF2S389, preferred, 0x-1152, 1.25
 monitor=DP-1, preferred, 1600x0, 1
 monitor=DP-2, preferred, 1600x0, 1.6
+monitor= desc:DHI, preferred,1600x0,1
+monitor= desc:RGT, preferred,1600x0,1
 # workspace = r[1-4],monitor:eDP-1, default:true, gapsout:0
 # workspace = 1, monitor:HDMI-A-1, default:true
 # workspace = 2, monitor:HDMI-A-1
@@ -92,6 +94,7 @@ cursor {
 
 windowrulev2 = opacity 0.80 0.70,title:.*Lutris.*
 windowrulev2 = float,class:^(protonvpn-app)$
+windowrulev2 = float,class:^(blender)$
 # Smart gaps from hyperland docs
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
