--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -16,6 +16,7 @@ monitor=DP-2, preferred, 1600x0, 1.6
 monitor= desc:DHI, preferred,1600x0,1
 monitor= desc:RGT, preferred,1600x0,1
 # workspace = r[1-4],monitor:eDP-1, default:true, gapsout:0
+workspace = 1-4,monitor:eDP-1
 # workspace = 1, monitor:HDMI-A-1, default:true
 # workspace = 2, monitor:HDMI-A-1
 # workspace = 3, monitor:HDMI-A-1
