--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -57,6 +57,7 @@ bind = $mainMod, semicolon, exec, pkill -x rofi || rofi -show emoji -modi emoji
 exec-once = solaar -w hide #logitec mouse
 exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
 exec-once = kwalletd6 &
+exec-once = syncthing --no-browser &
 
 # Animation CPU usage fix
 animations {
