--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -51,26 +51,30 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
 # colorscheme
 set -g @catppuccin_flavour 'mocha'
 set -g @catppuccin_status_background "default"
 set -g @catppuccin_window_default_background ""
-# set -g @catppuccin_status_left_separator "█"
 set -g @catppuccin_status_left_separator ""
 set -g @catppuccin_status_right_separator " "
+# set -g @catppuccin_status_left_separator "█"
+# set -g @catppuccin_status_right_separator "█"
 set -g @catppuccin_window_current_fill "number"
 set -g @catppuccin_window_current_text "#W"
 set -g @catppuccin_window_text "#W"
 set -g @catppuccin_window_default_text "#W"
-# set -g @catppuccin_window_right_separator "█"
 set -g @catppuccin_window_right_separator ""
 set -g @catppuccin_window_left_separator ""
+# set -g @catppuccin_window_right_separator "█"
+# set -g @catppuccin_window_left_separator "█"
 set -g @catppuccin_window_number_position "left"
 set -g @catppuccin_window_middle_separator ""
 set -g @catppuccin_window_default_fill "number"
 set -g @catppuccin_status_modules_right "directory session"
-set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_status_connect_separator "yes"
 set -g @catppuccin_session_text "null"
 # set vi-mode
 set-window-option -g mode-keys vi
