prefs + kitty commit

--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -8,16 +8,18 @@
 
 
 # Monitors
-monitor=eDP-1,1920x1080@120,0x0,1.2
+monitor=eDP-1,1920x1080@120,0x0,1.2 # laptop
 # monitor=HDMI-A-1, preferred, 1600x0, 1.6
 monitor= desc:LG Electronics LG ULTRAGEAR 308NTKF2S389, preferred, 0x-1152, 1.25
 monitor=DP-1, preferred, 1600x0, 1
 monitor=DP-2, preferred, 1600x0, 1.6
 monitor= desc:DHI, preferred,1600x0,1
-monitor= desc:RGT, preferred,1600x0,1
-# workspace = r[1-4],monitor:eDP-1, default:true, gapsout:0
+monitor= desc:RGT, preferred,1600x0,0.8 # home screen
+
+# Workspaces
 workspace = 1,monitor:eDP-1
 workspace = 2,monitor:eDP-1
+# workspace = r[1-4],monitor:eDP-1, default:true, gapsout:0
 # workspace = 1, monitor:HDMI-A-1, default:true
 # workspace = 2, monitor:HDMI-A-1
 # workspace = 3, monitor:HDMI-A-1
@@ -95,10 +97,12 @@ cursor {
 
 # window effects
 
-windowrulev2 = opacity 0.95 0.70,class:.*kitty.*
+windowrulev2 = opacity 0.95 0.9,class:.*kitty.*
 windowrulev2 = opacity 0.80 0.70,title:.*Lutris.*
 windowrulev2 = float,class:^(protonvpn-app)$
 windowrulev2 = float,class:^(blender)$
+windowrulev2 = float,size 600 500, title:^(Picture-in-Picture)$
+windowrulev2 = float, class:^(mpv)$
 # Smart gaps from hyperland docs
 workspace = w[tv1], gapsout:0, gapsin:0
 workspace = f[1], gapsout:0, gapsin:0
