--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -2,34 +2,37 @@ term xterm-kitty
 include theme.conf
 tab_bar_edge top
 
-font_family      CaskaydiaCove Nerd Font Mono
-italic_font      auto
-bold_font        auto
-bold_italic_font auto
+# font_family      CaskaydiaCove Nerd Font Mono
+font_family      JetBrainsMONO Nerd Font Mono
+# italic_font      auto
+# bold_font        auto
+# bold_italic_font auto
 # font_family         zed-mono-extended
 # font_family      ZedMonoNFM-ExtdLight
 # font_family            BlexMonoNFM-Medium
 # bold_font              BlexMonoNFM-Bold
 # italic_font            BlexMonoNFM-Italic
 # bold_italic_font       BlexMonoNFM-SemiBoldItalic
-# disable_ligatures always
+disable_ligatures never
 # faont family 
-disable_ligatures_in all always
+# disable_ligatures_in all always
 # == !== != => 
 cursor_trail_start_threshold 0
 cursor_trail 3
 cursor_trail_decay 0.1 0.4
 
 font_size 16
-modify_font cell_height 120%
+modify_font cell_height 100%
+modify_font cell_width 100%
 window_padding_width 2
-background_opacity 0.95
+background_opacity 1
 background_blur 20
 hide_window_decorations true
 confirm_os_window_close 0
 
 ## SHORTCUTS
 
-# kitty_mod ctrl+b
+# kitty_mod ctrl+shift
 map kitty_mod+f5 load_config_file  .config/kitty/kitty.conf
 map kitty_mod+f3 disable_ligatures_in all always
+map kitty_mod+f4 disable_ligatures_in all never
