godot minor fixes + not rounded

--- a/.config/godot/editor_layouts.cfg
+++ b/.config/godot/editor_layouts.cfg
@@ -107,3 +107,38 @@ dock_hsplit_1=0
 dock_hsplit_2=395
 dock_hsplit_3=-562
 dock_hsplit_4=331
+
+[unreal like]
+
+dock_5="Scene,Import"
+dock_5_selected_tab_idx=0
+dock_6="Inspector,Node,History"
+dock_6_selected_tab_idx=0
+dock_floating={}
+dock_4="FileSystem"
+dock_bottom=["FileSystem"]
+dock_closed=[]
+dock_split_3=-378
+dock_hsplit_1=0
+dock_hsplit_2=391
+dock_hsplit_3=-585
+dock_hsplit_4=265
+
+[unreal like/FileSystem]
+
+h_split_offset=384
+v_split_offset=0
+display_mode=2
+file_sort=0
+file_list_display_mode=0
+selected_paths=PackedStringArray("res://")
+uncollapsed_paths=PackedStringArray("res://")
+
+[unreal like/Node]
+
+current_tab=0
+
+[unreal like/History]
+
+include_scene=true
+include_global=true
