--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -14,7 +14,7 @@ monitor= desc:LG Electronics LG ULTRAGEAR 308NTKF2S389, preferred, 0x-1152, 1.25
 monitor=DP-1, preferred, 1600x0, 1
 monitor=DP-2, preferred, 1600x0, 1.6
 monitor= desc:DHI, preferred,1600x0,1
-monitor= desc:RGT, preferred,1600x0,0.8 # home screen
+monitor= desc:RGT, preferred,1600x0,1 # home screen
 
 # Workspaces
 workspace = 1,monitor:eDP-1
@@ -95,13 +95,16 @@ cursor {
   no_hardware_cursors=true
 }
 
+decoration {
+    rounding = 0
+}
 # window effects
 
 windowrulev2 = opacity 0.95 0.9,class:.*kitty.*
 windowrulev2 = opacity 0.80 0.70,title:.*Lutris.*
 windowrulev2 = float,class:^(protonvpn-app)$
 windowrulev2 = float,class:^(blender)$
-windowrulev2 = float,size 600 500, title:^(Picture-in-Picture)$
+windowrulev2 = float, pin, size 600 500, title:^(Picture-in-Picture)$
 windowrulev2 = float, class:^(mpv)$
 # Smart gaps from hyperland docs
 workspace = w[tv1], gapsout:0, gapsin:0
@@ -110,3 +113,13 @@ windowrule = bordersize 0, floating:0, onworkspace:w[tv1]
 windowrule = rounding 0, floating:0, onworkspace:w[tv1]
 windowrule = bordersize 0, floating:0, onworkspace:f[1]
 windowrule = rounding 0, floating:0, onworkspace:f[1]
+
+## GODOT WINDOWS 
+# Float all Godot windows EXCEPT the main editor
+windowrulev2 = size 1000 800,center,class:^(org.godotengine.Editor)$,floating:1,initialTitle:.*Settings.*
+windowrulev2 = size 1000 800,center,class:^(org.godotengine.Editor)$,floating:1,initialTitle:.*Node.*
+windowrulev2 = size 1000 800,center,class:^(org.godotengine.Editor)$,floating:1,initialTitle:.*New.*
+windowrulev2 = size 1000 800,center,class:^(org.godotengine.Editor)$,floating:1,initialTitle:.*Save.*
+windowrulev2 = size 1000 800,center,class:^(org.godotengine.Editor)$,floating:1,initialTitle:.*Choose.*
+windowrulev2 = size 530 350,center,class:^(org.godotengine.Editor)$,floating:1,initialTitle:.*Attach Node Script.*
+windowrulev2 = size 400 500,center,class:^(org.godotengine.Editor)$,initialTitle:negative:^(?!(Godot)).*,title:negative:.*Settings.*
