--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -10,15 +10,14 @@ git:
   log:
     showGraph: always
     showWholeGraph: true
-  paging:
-    colorArg: always
-    pager: delta --dark --paging=never
+  pagers:
+    - colorArg: always
+      pager: delta --dark --paging=never
 os:
   edit: "nvim {{filename}}"
   # --remote-send "<cmd>lua require('core.scripts.lazygit-open-file')('{{filename}}', '{{line}}')<CR>"
   # editCommandTemplate: '{{editor}} --server /tmp/nvim-server.pipe --remote-tab "$(pwd)/{{filename}}"'
   # editCommandTemplate: nvim --server /tmp/nvim-server.pipe --remote-send "<cmd>lua require('scripts.lazygit')('{{filename}}', '{{line}}')<CR>"
-
 customCommands:
   - key: "a"
     context: "localBranches"
