wip:working waybar

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -1,4 +1,9 @@
 
+# TODO: fix zsh config link to new path
+# TODO: fix rofi theme
+#
+#
+#
 # █▄▀ █▀▀ █▄█ █▄▄ █ █▄░█ █▀▄ █ █▄░█ █▀▀ █▀
 # █░█ ██▄ ░█░ █▄█ █ █░▀█ █▄▀ █ █░▀█ █▄█ ▄█
 
@@ -7,6 +12,7 @@
 
 # Main modifier
 $mainMod = Super # super / meta / windows key
+bind = $mainMod, i, exec, notify-send $scrPath
 
 # Assign apps
 $term = kitty tmux
@@ -23,7 +29,8 @@ bind = $mainMod, Delete, exit, # kill hyprland session
 bind = $mainMod, W, togglefloating, # toggle the window between focus and float
 bind = $mainMod, G, togglegroup, # toggle the window between focus and group
 bind = Alt, Return, fullscreen, # toggle the window between focus and fullscreen
-bind = $mainMod, L, exec, swaylock # launch lock screen
+# bind = $mainMod, L, exec, swaylock # launch lock screen
+bind = $mainMod, L, exec, hyprlock # launch lock screen
 bind = $mainMod+Shift, F, exec, $scrPath/windowpin.sh # toggle pin on focused window
 bind = $mainMod, Backspace, exec, $scrPath/logoutlaunch.sh # launch logout menu
 bind = Ctrl+Alt, W, exec, killall waybar || waybar # toggle waybar
@@ -81,7 +88,7 @@ bind = $mainMod+Shift, R, exec, pkill -x rofi || $scrPath/wallbashtoggle.sh -m #
 bind = $mainMod+Shift, T, exec, pkill -x rofi || $scrPath/themeselect.sh # launch theme select menu
 bind = $mainMod+Shift, A, exec, pkill -x rofi || $scrPath/rofiselect.sh # launch select menu
 bind = $mainMod+Shift, W, exec, pkill -x rofi || $scrPath/swwwallselect.sh # launch wallpaper select menu
-bind = $mainMod, V, exec, pkill -x rofi || $scrPath/cliphist.sh c # launch clipboard
+bind = $mainMod, V, exec, pkill -x rofi || $scrPath/cliphist.sh -c # launch clipboard
 bind = $mainMod, K, exec, $scrPath/keyboardswitch.sh # switch keyboard layout
 
 bind = $mainMod+Ctrl, G, exec, ~/dotfiles/my-scripts/godotWorkspace.sh # game dev workspace
@@ -169,3 +176,5 @@ bind = $mainMod+Alt, 7, movetoworkspacesilent, 7
 bind = $mainMod+Alt, 8, movetoworkspacesilent, 8
 bind = $mainMod+Alt, 9, movetoworkspacesilent, 9
 bind = $mainMod+Alt, 0, movetoworkspacesilent, 10
+
+
