--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -7,14 +7,15 @@
 #
 
 
+env = mo_helpers, $scrPath
 # Monitors
-monitor=eDP-1,1920x1080@120,0x0,1.2 # laptop
+# monitor=eDP-1,1920x1080@120,0x0,1.2 # laptop
 # monitor=HDMI-A-1, preferred, 1600x0, 1.6
-monitor= desc:LG Electronics LG ULTRAGEAR 308NTKF2S389, preferred, 0x-1152, 1.25
-monitor=DP-1, preferred, 1600x0, 1
-monitor=DP-2, preferred, 1600x0, 1.6
-monitor= desc:DHI, preferred,1600x0,1
-monitor= desc:RGT, preferred,1600x0,1 # home screen
+# monitor= desc:LG Electronics LG ULTRAGEAR 308NTKF2S389, preferred, 0x-1152, 1.25
+# monitor=DP-1, preferred, 1600x0, 1
+# monitor=DP-2, preferred, 1600x0, 1.6
+# monitor= desc:DHI, preferred,1600x0,1
+# monitor= desc:RGT, preferred,1600x0,1 # home screen
 
 # Workspaces
 workspace = 1,monitor:eDP-1
@@ -53,13 +54,15 @@ bind = $mainMod+Alt, F, exec, $browser --private-window # launch web browser
 bind = $mainMod, space, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
 bind = $mainMod, semicolon, exec, pkill -x rofi || rofi -show emoji -modi emoji
 
+
 # █░░ ▄▀█ █░█ █▄░█ █▀▀ █░█
 # █▄▄ █▀█ █▄█ █░▀█ █▄▄ █▀█
 
 # See https://wiki.hyprland.org/Configuring/Keywords/
 exec-once = solaar -w hide #logitec mouse
-exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
+# exec = gsettings set org.gnome.desktop.interface gtk-theme 'Decay-Green'
 exec-once = kwalletd6 &
+# exec-once = waybar &
 exec-once = syncthing --no-browser &
 
 # Animation CPU usage fix
