--- a/.config/hypr/userprefs.conf
+++ b/.config/hypr/userprefs.conf
@@ -90,10 +90,19 @@ input {
         natural_scroll = yes
     }
 
-    sensitivity = 0
-    force_no_accel = 1
+    sensitivity = 0.5
+    force_no_accel = 0
     numlock_by_default = true
 }
+
+
+# touchpad sensitivity, works only if force_no_accel = 0
+device {
+  name = gxtp5100:00-27c6:01e0-touchpad
+  sensitivity = 0.5
+}
+
+
 cursor {
   no_hardware_cursors=true
 }
