--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -72,7 +72,10 @@ bind = $mainMod CTRL , H, changegroupactive, b
 bind = $mainMod CTRL , L, changegroupactive, f
 
 # Screenshot/Screencapture
-bind = $mainMod, F1, exec, grimblast save output
+# bind = $mainMod, F1, exec, grimblast save output
+# bind = $mainMod, F1, exec, $scrPath/screenshot.sh m # screenshot current monitor
+bind = $mainMod, F1, exec, ~/dotfiles/my-scripts/screenshot_notify.sh # screenshot current monitor
+
 bind = $mainMod, P, exec, $scrPath/screenshot.sh s # partial screenshot capture
 bind = $mainMod+Ctrl, P, exec, $scrPath/screenshot.sh sf # partial screenshot capture (frozen screen)
 bind = $mainMod+Alt, P, exec, $scrPath/screenshot.sh m # monitor screenshot capture
@@ -111,6 +114,35 @@ bind = $mainMod, 7, workspace, 7
 bind = $mainMod, 8, workspace, 8
 bind = $mainMod, 9, workspace, 9
 bind = $mainMod, 0, workspace, 10
+
+# Azerty binding for 1-7
+bind = $mainMod, ampersand, workspace, 1
+bind = $mainMod, eacute, workspace, 2
+bind = $mainMod, quotedbl, workspace, 3
+bind = $mainMod, apostrophe, workspace, 4
+bind = $mainMod, parenleft, workspace, 5
+bind = $mainMod, minus, workspace, 6
+bind = $mainMod, egrave, workspace, 7
+
+
+# Move focused window to a workspace
+bind = $mainMod+Shift, ampersand, movetoworkspace, 1
+bind = $mainMod+Shift, eacute, movetoworkspace, 2
+bind = $mainMod+Shift, quotedbl, movetoworkspace, 3
+bind = $mainMod+Shift, apostrophe, movetoworkspace, 4
+bind = $mainMod+Shift, parenleft, movetoworkspace, 5
+bind = $mainMod+Shift, minus, movetoworkspace, 6
+bind = $mainMod+Shift, egrave, movetoworkspace, 7
+
+# volume w mouse
+bind = , mouse_right, exec, $scrPath/volumecontrol.sh -o d # decrease volume
+bind = , mouse_left, exec, $scrPath/volumecontrol.sh -o i # increase volume
+
+
+# keybinds
+bind = $mainMod+Alt, F, exec, $browser --private-window # launch web browser
+bind = $mainMod, space, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
+bind = $mainMod, semicolon, exec, pkill -x rofi || rofi -show emoji -modi emoji
 
 # Switch workspaces to a relative workspace
 bind = $mainMod+Ctrl, Right, workspace, r+1
